# django-airbnb-clone

backend/: pyproject.toml
backend/bookings/: admin.py  models.py  serializers.py
backend/bookings/migrations/: 0001_initial.py  0002_alter_booking_experiences_alter_booking_room_and_more.py
backend/categories/: models.py  serializers.py  views.py
backend/categories/migrations/: 0001_initial.py  0002_alter_category_options.py
backend/config/: authentication.py  settings.py
backend/dms/: admin.py  models.py
backend/dms/migrations/: 0001_initial.py  0002_alter_dmroom_users_alter_message_room_and_more.py
backend/experiences/: admin.py  models.py  views.py
backend/experiences/migrations/: 0001_initial.py  0002_rename_experiences_experience.py  0003_alter_perk_detail_alter_perk_explanation.py  0004_experience_category.py  0005_alter_experience_category_alter_experience_host_and_more.py
backend/medias/: models.py  urls.py  views.py
backend/medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py  0003_alter_photo_experience_alter_photo_room.py
backend/reviews/: admin.py  models.py
backend/reviews/migrations/: 0001_initial.py  0002_rename_reveiwmodel_review.py  0003_alter_review_experience_alter_review_room_and_more.py
backend/rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/rooms/migrations/: 0001_initial.py  0002_room_amenities_alter_amenity_description.py  (+4 more)
backend/users/: models.py  serializers.py  urls.py  views.py
backend/wishlists/: admin.py  serializers.py  urls.py  views.py
(+25 files in other folders)
