[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["hwna00 <layton3534@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"
djangorestframework = "^3.14.0"
PyJWT = "^2.6.0"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
